Cache font during build so running tests offline works